# MinimalQml

./: .gitignore  CMakeLists.txt  README.md  build.sh  minimal.pro
cbs/: Makefile  main.cpp  wrapper.go
go/: CMakeLists.txt  test.go  wrapper.go
src/: CMakeLists.txt  handlers.cpp  handlers.h  handletextfield.cpp  handletextfield.h  main.cpp  main.qml  qjsonmodel.cpp
vagrant/: Vagrantfile  deps.sh
